# rust-aws-azure-login

./: Cargo.toml  README.md
aws/: Cargo.toml
aws/src/: aws_config.rs  aws_credentials.rs  lib.rs  serde_support.rs
aws_azure_login/: Cargo.toml
aws_azure_login/src/: config.rs  json.rs  login.rs  main.rs
file_manager/: Cargo.toml
file_manager/src/: aws_config.rs  aws_credential.rs  aws_credentials.rs  lib.rs  serde_support.rs
rust-aws-azure-login/: Cargo.toml
rust-aws-azure-login/src/: config.rs  helpers.rs  login.rs  main.rs
shared/: Cargo.toml
shared/src/: args.rs
sso/: Cargo.toml
sso/src/: filter.rs  helpers.rs  lib.rs  saml_request.rs  saml_response.rs  sso.rs
web/: Cargo.toml
web/src/: helpers.rs  lib.rs  login.rs  saml_response.rs
