[package]
name = "aws"
version = "0.1.0"
edition = "2021"
authors = ["Matt Wilding <tabmaw@rwwa.com.au>"]

[dependencies]
tracing = "0.1"
ini = "1.3"
directories = "5.0"
serde = { version = "1.0", features = ["derive"] }
serde_ini = "0.2"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
dialoguer = "0.10"
