[package]
name = "aws"
version = "0.1.0"
edition = "2021"
authors = ["Matthew Wilding <matt@wildingstudios.com>"]

[dependencies]
tracing = "0.1"
directories = "5.0"
serde = { version = "1.0", features = ["derive"] }
serde_ini = "0.2"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
