[package]
name = "aws-azure-login"
version = "0.1.0"
edition = "2021"
authors = ["Matthew Wilding <matt@wildingstudios.com>"]

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3

[dependencies]
shared = { path = "../shared" }
file_manager = { path = "../file_manager" }
sso = { path = "../sso" }
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0"
tokio = { version = "1", features = ["full"] }
dialoguer = "0.11"
clap = { version = "4.4", features = ["derive"] }
serde_json = "1.0"
serde = { version = "1.0.188", features = ["derive"] }
