[package]
name = "rust-aws-azure-login"
version = "0.1.0"
edition = "2021"
authors = ["Matt Wilding <tabmaw@rwwa.com.au>"]

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3

[dependencies]
aws = { path = "../aws" }
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1.4", features = ["v4"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
flate2 = "1.0"
base64 = "0.21"
url = "2.4"
maplit = "1.0"
chromiumoxide = { version = "0.5", features = ["tokio-runtime"], default-features = false}
tokio = "1.32.0"
