[package]
name = "rust-aws-azure-login"
version = "0.1.0"
edition = "2021"
authors = ["Matt Wilding <tabmaw@rwwa.com.au>"]

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3

[dependencies]
aws = { path = "../aws" }
web = { path = "../web" }
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0"
tokio = { version = "1", features = ["full"] }
clap = { version = "4.4.4", features = ["derive"] }
dialoguer = "0.10"
