[package]
name = "web"
version = "0.1.0"
edition = "2021"
authors = ["Matthew Wilding <matt@wildingstudios.com>"]

[dependencies]
shared = { path = "../shared" }
aws = { path = "../aws" }
tracing = "0.1"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.4", features = ["v4"] }
flate2 = "1.0"
base64 = "0.21"
url = "2.4"
maplit = "1.0"
headless_chrome = { git = "https://github.com/atroche/rust-headless-chrome", features = ["fetch"] }
log = "0.4.20"
serde = { version = "1.0", features = ["derive"] }
serde-xml-rs = "0.6"
dialoguer = "0.10"
directories = "5.0"
aws-sdk-sts = "0.30"
aws-config = "0.56"
aws-credential-types = "0.56"
aws-smithy-types = "0.56"
